[project]
name = "space-punk"
version = "0.1.0"
description = "A Period-UNKown rock engine!"
authors = [
    {name = "Odysseas Xenos",email = "odysseas.xenos@proton.me"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
